--- a/index.html
+++ b/index.html
@@ -25,13 +25,18 @@ label[for="chkModo"]{
 #primColumna label{
 margin:10px 0;
 }
+.bg-danger {
+    background-color: #4267B2 !important;
+}
 </style>
 <section>
-	<div class="container px-0 ">
-		<img src="images/memoriaagil.png" alt="" class="m-5 " width="200px">
-	</div>
-	<div class="container-fluid px-0 bg-danger text-white text-center p-4">
-		<h2 class="display-3">Speed Memory</h2>
+	<div class="container-fluid px-0 bg-danger text-white text-center p-4 mx-0 row">
+		<div class="col-sm-12 col-md-4">
+			<img alt="" class=" img-fluid mt-5 my-auto" src="images/memoriaagil.png?v=3" width="400px" />
+		</div>
+		<div class="col text-left">
+			<h2 class="display-3">iNumbers</h2>
+		</div>
 	</div>
 </section>
 	<div class="container-fluid my-4" id="app">
@@ -98,8 +103,9 @@ margin:10px 0;
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-<script src="app.js?version=1.0"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+<script src="app.js?version=1.18"></script>
 
 </body>
 </html>
