--- a/letras.html
+++ b/letras.html
@@ -26,11 +26,14 @@ margin:10px 0;
 }
 </style>
 <section>
-<div class="container px-0 "><img alt="" class="m-5 " src="images/memoriaagil.png" width="400px" /></div>
-
-<div class="container-fluid px-0 bg-danger text-white text-center p-4">
-<h2 class="display-3">iWords</h2>
-</div>
+	<div class="container-fluid px-0 bg-danger text-white text-center p-4 mx-0 row">
+		<div class="col-sm-12 col-md-4">
+			<img alt="" class=" img-fluid mt-5 my-auto" src="images/memoriaagil.png?v=3" width="400px" />
+		</div>
+		<div class="col text-left">
+			<h2 class="display-3">iWords</h2>
+		</div>
+	</div>
 </section>
 
 <div class="container-fluid my-4" id="app">
@@ -39,13 +42,13 @@ margin:10px 0;
 			<div class="card my-4 rounded-pill">
 				<div class="card-body">
 					<div class="row row-cols-1 ">
-						<div class="col text-center"><label for="">Palabras:</label> <input :readonly="bloquear" :value="digitos" @change="sumarDigito" class="form-control w-75 m-auto text-center" id="txtDigitos" min="6" step="1" type="number" /></div>
+						<div class="col text-center"><label for="">Palabras:</label> <input :readonly="bloquear" :value="digitos" @change="sumarDigito" class="form-control w-75 m-auto text-center" id="txtDigitos" min="6" max="9" step="1" type="number" /></div>
 		
 						<div class="col text-center"><label for="">Segundos:</label> <input :readonly="bloquear" class="form-control w-75 m-auto text-center" id="txtSegundos" min="0.1" step="0.1" type="number" v-model="segundos" /></div>
 		
-						<div class="col text-center"><label for="">Modo r&aacute;pido:</label>
+						<div class="col text-center d-none"><label for="">Modo r&aacute;pido:</label>
 		
-						<div class="custom-control custom-checkbox"><input :disabled="bloquear" class="custom-control-input" id="chkModo" type="checkbox" v-on:click="modo = !modo;" /> 
+						<div class="custom-control custom-checkbox  d-none"><input :disabled="bloquear" class="custom-control-input" id="chkModo" type="checkbox" v-on:click="modo = !modo;" /> 
 							<label class="custom-control-label" for="chkModo"><span v-if="modo==false">No</span> <span v-else="">S&iacute;</span></label>
 						</div>
 						</div>
@@ -62,7 +65,7 @@ margin:10px 0;
 		</div>
 
 
-		<div class="col-6">
+		<div class="col-sm-12 col-md">
 			<div class="card my-4 rounded-pill">
 				<div class="card-body py-5 d-flex align-items-center" id="divJuego">
 					<div :class="{' d-flex justify-content-between w-100' : hayRespuesta, 'm-auto': !hayRespuesta }" class="card-title px-5 ">
@@ -76,7 +79,7 @@ margin:10px 0;
 								<div class="list-group-item itemMovible"   v-for="(item, index) in desorden" :data-id="index">{{item}}</div>
 							</div>
 						</div>
-						<div class="col" id="numerosHijo" v-if="hayRespuesta" >
+						<div class="col d-none" id="numerosHijo" v-if="hayRespuesta" >
 							<div v-for="(item, index) in tempo">
 								<h2 class="numerosJuego row"><span >{{item}}</span></h2>
 							</div>
@@ -93,8 +96,10 @@ margin:10px 0;
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script><script src="https://raw.githack.com/SortableJS/Sortable/master/Sortable.js"></script>
+	<!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> -->
+	<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+	<script src="https://raw.githack.com/SortableJS/Sortable/master/Sortable.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jquery-sortablejs@latest/jquery-sortable.js"></script>
-	<script src="appLetras.js?version=1.6"></script>
+	<script src="appLetras.js?version=1.7"></script>
 </body>
 </html>
