--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@ margin:10px 0;
 .bg-danger {
     background-color: #4267B2 !important;
 }
+.asterisco{
+	font-size: 5rem!important;
+}
 </style>
 <section>
 	<div class="container-fluid px-0 bg-danger text-white text-center p-4 mx-0 row">
@@ -54,14 +57,14 @@ margin:10px 0;
 								<input type="number" class="form-control w-75 m-auto text-center" :readonly="bloquear" id="txtSegundos" min=0.1 step="0.1" v-model="segundos">
 							</div>
 							<div class="col text-center">
-								<label for="">Modo rápido:</label>
+								<label for="">Rellenar casilleros:</label>
 								<div class="custom-control custom-checkbox">
 									<input type="checkbox" class="custom-control-input" id="chkModo" v-on:click="modo = !modo;" :disabled="bloquear">
 									<label class="custom-control-label"  for="chkModo"><span v-if="modo==false">No</span> <span v-else>Sí</span></label>
 								</div>
 							</div>
 							<div class="col text-center">
-								<label for="">Iniciar:</label>
+							
 								<button type="button" class="btn btn-outline-dark d-block m-auto" v-on:click="iniciar(); inicio=!inicio; bloquear=true;" v-if="inicio" id="btnIniciar">Empezar</button>
 								<button type="button" class="btn btn-outline-dark d-block m-auto" v-on:click="comprobar(); comprueba=!comprueba;" v-if="comprueba" id="btnComprobar">Comprobar</button>
 								<button type="button" class="btn btn-outline-dark d-block m-auto" v-on:click="nuevo(); reiniciar=!reiniciar; bloquear=false" v-if="reiniciar" id="btnComprobar">Nuevo</button>
@@ -79,7 +82,7 @@ margin:10px 0;
 						<div class="card-title m-auto  ">
 							<div class="row d-flex justify-content-center" id="numerosPadre">
 								<div class="divInterno " v-if="!mostrarInputs" v-for="(item, index) in numerosArray" >
-									<h2 class="numerosJuego px-2" :data-id="index" ><span class="d1" v-bind:class="item.izquierda">{{item.dato.toString().substring(0, 1)}}</span><span class="d2" v-bind:class="item.derecha">{{item.dato.toString().substring(2, 1)}}</span></h2>
+									<h2 class="numerosJuego px-2" :class="{'asterisco':comienza}" :data-id="index" ><span class="d1" v-bind:class="item.izquierda">{{item.dato.toString().substring(0, 1)}}</span><span class="d2" v-bind:class="item.derecha">{{item.dato.toString().substring(2, 1)}}</span></h2>
 								</div>
 							</div>
 								<div class="row" id="inputEditables" v-if="mostrarRespuestas">
@@ -105,7 +108,7 @@ margin:10px 0;
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 <!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> -->
 <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-<script src="app.js?version=1.18"></script>
+<script src="app.js?version=1.19"></script>
 
 </body>
 </html>
