--- a/letras.html
+++ b/letras.html
@@ -24,6 +24,9 @@ label[for="chkModo"]{
 #primColumna label{
 margin:10px 0;
 }
+.asterisco{
+	font-size: 5rem!important;line-height: 0.9;
+}
 </style>
 <section>
 	<div class="container-fluid px-0 bg-danger text-white text-center p-4 mx-0 row">
@@ -42,7 +45,7 @@ margin:10px 0;
 			<div class="card my-4 rounded-pill">
 				<div class="card-body">
 					<div class="row row-cols-1 ">
-						<div class="col text-center"><label for="">Palabras:</label> <input :readonly="bloquear" :value="digitos" @change="sumarDigito" class="form-control w-75 m-auto text-center" id="txtDigitos" min="6" max="9" step="1" type="number" /></div>
+						<div class="col text-center"><label for="">Palabras:</label> <input :readonly="bloquear" :value="digitos" @change="sumarDigito" class="form-control w-75 m-auto text-center" id="txtDigitos" min="5" max="15" step="1" type="number" /></div>
 		
 						<div class="col text-center"><label for="">Segundos:</label> <input :readonly="bloquear" class="form-control w-75 m-auto text-center" id="txtSegundos" min="0.1" step="0.1" type="number" v-model="segundos" /></div>
 		
@@ -53,8 +56,8 @@ margin:10px 0;
 						</div>
 						</div>
 		
-					<div class="col text-center">
-						<label for="">Iniciar:</label>
+					<div class="col text-center mt-3">
+						
 						<button class="btn btn-outline-dark d-block m-auto" id="btnIniciar" type="button" v-if="inicio" v-on:click="iniciar(); inicio=!inicio; bloquear=true; ">Empezar</button>
 						<button class="btn btn-outline-dark d-block m-auto" id="btnComprobar" type="button" v-if="comprueba" v-on:click="comprobar(); comprueba=!comprueba;">Comprobar</button>
 						<button class="btn btn-outline-dark d-block m-auto" id="btnComprobar" type="button" v-if="reiniciar" v-on:click="nuevo(); reiniciar=!reiniciar; bloquear=false">Nuevo</button>
@@ -70,9 +73,7 @@ margin:10px 0;
 				<div class="card-body py-5 d-flex align-items-center" id="divJuego">
 					<div :class="{' d-flex justify-content-between w-100' : hayRespuesta, 'm-auto': !hayRespuesta }" class="card-title px-5 ">
 						<div class="col" id="numerosPadre">
-							<div v-for="(item, index) in letrasArray" v-if="!mostrarInputs">
-								<h2 class="numerosJuego row"><span v-bind:class="item.resultado">{{item.dato}}</span></h2>
-							</div>
+								<h2 v-for="(item, index) in letrasArray" v-if="!mostrarInputs" class="numerosJuego  text-center" :class="{'asterisco':comienza}"><span v-bind:class="item.resultado">{{item.dato}}</span></h2>
 						</div>
 						<div class="col" id="inputEditables" v-if="mostrarInputs" >
 							<div class="list-group rowEditable" id="simpleList">
@@ -100,6 +101,6 @@ margin:10px 0;
 	<script src="https://cdn.jsdelivr.net/npm/vue"></script>
 	<script src="https://raw.githack.com/SortableJS/Sortable/master/Sortable.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jquery-sortablejs@latest/jquery-sortable.js"></script>
-	<script src="appLetras.js?version=1.7"></script>
+	<script src="appLetras.js?version=1.9"></script>
 </body>
 </html>
