--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ label[for="chkModo"]{
 margin:10px 0;
 }
 .bg-danger {
-    background-color: #4267B2 !important;
+    background-color: #000 !important;
 }
 .asterisco{
 	/* font-size: 2rem!important; line-height: 0.6 */
@@ -65,7 +65,7 @@ input[type=number] {
 			<img alt="" class=" img-fluid mt-5 my-auto" src="images/memoriaagil.png?v=3" width="400px" />
 		</div>
 		<div class="col text-left">
-			<h2 class="display-3">iNumbers</h2>
+			<h2 class="display-3">iNums</h2>
 		</div>
 	</div>
 </section>
@@ -135,7 +135,7 @@ input[type=number] {
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 <!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> -->
-<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
 <script src="app.js?version=0.65"></script>
 
 </body>
