--- a/script medMedory agilector.html
+++ b/script medMedory agilector.html
@@ -20,7 +20,7 @@
 			<textarea class="form-control" rows="5" v-model="textoInicial">
 			</textarea>
 			<div class="mt-2 d-grid d-flex justify-content-center">
-				<button class="btn btn-danger " @click="inciarAplicativo()"><span class="fs-5">AGILECTURA</span></button>
+				<button class="btn btn-danger " @click="inciarAplicativo()"><span class="fs-5">SIGUIENTE</span></button>
 			</div>
 		</div>
 	</section>
@@ -71,13 +71,13 @@
 			</div>
 		</div>
 		<div class="alert alert-primary my-2" role="alert" v-if="etapa=='aplicativo'">
-			Estás a punto de leer <b>{{ totalPalabras }}</b> palabras distribuidas entre <b>{{ lineasLeer }}</b> Líneas de <b>{{ numPalabras }} palabras cada una</b>, a una velocidad de <b>{{ palabrasxMinuto }} PPM (Palabras Por Minuto).</b> Aquí abajo tienes una previsualización de la línea más ancha de tu texto, con la configuración actual. Configura el tamaño y el estilo del texto haciendo clic en el botón <strong><i class="bi bi-gear-fill"></i></strong> y personaliza tu experiencia con Agilector antes de empezar. Una vez lo hayas hecho, haz clic en el botón “Empezar Lectura” para empezar a leer.
+			Estás a punto de leer <b>{{ totalPalabras }}</b> palabras distribuidas entre <b>{{ lineasLeer }}</b> Líneas de <b>{{ numPalabras }} palabras cada una</b>, a una velocidad de <b>{{ palabrasxMinuto }} PPM (Palabras Por Minuto).</b> Aquí abajo tienes una previsualización de la línea más ancha de tu texto, con la configuración actual. Configura el tamaño y el estilo del texto haciendo clic en el botón <strong><i class="bi bi-gear-fill"></i></strong> y personaliza tu experiencia con SUPERLECTOR antes de empezar. Una vez lo hayas hecho, haz clic en el botón “Empezar Lectura” para empezar a leer.
 		</div>
 		<div v-if="etapa=='aplicativo'" id="preview" class="text-center preview">
 			{{preview}}
 		</div>
 		<div class="mt-2 d-grid d-flex justify-content-center" v-if="!verSubConfiguracion">
-			<button class="btn btn-danger " @click="empezarLectura()"><span class="fs-5">Comenzar Lectura</span></button>
+			<button class="btn btn-danger " @click="empezarLectura()"><span class="fs-5">Empezar Lectura</span></button>
 		</div>
 	</section>
 	<section v-if="etapa=='lectura'" id="lectura">
@@ -104,7 +104,7 @@
 	createApp({
 		data() {
 			return {
-				textoInicial: "Para empezar, sólo tienes que copiar y pegar cualquier texto que te gustaría leer en este cuadro de texto. Agilector te ayudará a leer más rápido mostrando cada palabra o grupo de palabras durante sólo un instante, utilizando lo que se llama una Presentación Rápida de Series Visuales para aumentar tu velocidad de lectura. En el menú de ajustes, puedes determinar a qué velocidad quieres leer (palabras por minuto). También puedes elegir el número de palabras que te gustaría ver a la vez (tamaño del fragmento). Y también puedes elegir el tamaño y el tipo de fuente que prefieras. De esta forma, tu experiencia será lo más personalizada posible. Para ser lo más productivo posible con Agilector, es importante que practiques siempre con una velocidad un poco superior a tu velocidad cómoda de leer. Una vez hayas guardado la configuración, presiona el botón “Agilectura” para empezar a leer.",
+				textoInicial: "Para comenzar tu experiencia de lectura, simplemente copia y pega el texto que deseas abordar en la interfaz de nuestro innovador simulador, SUPERLECTOR 2.0. Este simulador ha sido diseñado meticulosamente para mejorar tu velocidad de lectura mediante la aplicación de la técnica avanzada de Presentación Rápida de Secuencias Visuales, esto te permitirá leer más rápido mostrando cada palabra o grupo de palabras durante sólo un instante. En el panel de configuración, podrás ajustar la velocidad de visualización (expresada en palabras por minuto), determinar el tamaño óptimo del fragmento que prefieres visualizar y personalizar la apariencia del texto según tu preferencia de fuente y tamaño.Para optimizar tu aprendizaje, te recomendamos practicar con una velocidad ligeramente superior a tu ritmo de lectura.Una vez que hayas afinado tus preferencias en el menú de ajustes, guarda la configuración y presiona con confianza el botón 'SIGUIENTE' para sumergirte en tu sesión de lectura mejorada con SUPERLECTOR 2.0. ¡Descubre un nuevo mundo de eficiencia y velocidad en tu proceso de lectura!",
 				etapa: 'inicial', numPalabras: 4, palabrasxMinuto:100, verSubConfiguracion:false, fuentes:[], peso:2, fuente_tamano:50, preview:'', aTexto:[], intervalo:null, inicio:0
 			}
 		},
@@ -122,6 +122,7 @@
 				this.etapa = 'lectura'
 				this.aTexto = this.textoInicial.split(' ')
 				this.preview = 'ㅤ';
+				this.inicio=0;
 				await this.sleep(1000);
 
 				this.intervalo = setInterval( ()=>{ this.extraerPalabras(); } , this.tiempo)
@@ -155,6 +156,7 @@
 			reiniciar(){
 				this.inicio=0;
 				clearInterval(this.intervalo);
+				this.intervalo = null;
 				this.empezarLectura();
 			},
 			sleep(ms) {
