--- a/script medMedory agilector.html
+++ b/script medMedory agilector.html
@@ -1,199 +1,223 @@
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-
-<style>
-	.btn-morado{
-		background-color:#5c08ac;border: 1px solid #5c08ac;color: white; 
-	}
-	.btn-morado:hover{
-		background-color: #40116d; color: white; 
-	}
-</style>
-<div id="app">
+<!DOCTYPE html>
+<html lang="es">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+</head>
+<body>
 	
-	<section v-if="etapa =='inicial'">
-		<div class="bg-secondary text-light p-1">
-			<p class="fs-3 fw-bold text-center">Copia y pega abajo el texto que quieres leer</p>
-		</div>
-		<div class="my-2" id="textoInicial">
-			<textarea class="form-control" rows="5" v-model="textoInicial">
-			</textarea>
-			<div class="mt-2 d-grid d-flex justify-content-center">
-				<button class="btn btn-danger " @click="inciarAplicativo()"><span class="fs-5">SIGUIENTE</span></button>
+	<style>
+		.btn-morado{
+			background-color:#5c08ac;border: 1px solid #5c08ac;color: white;
+		}
+		.btn-morado:hover{
+			background-color: #40116d; color: white;
+		}
+		#encabezado{
+			width: 100%;
+			background-color: #094679;
+			color: white;
+		}
+		#textoPegar{font-size: 20px;font-weight: 400;min-height: 450px;}
+		.preview{
+			font-size: 50px;
+		}
+		.btn-primary{
+			background-color:#094679;
+			border: none;
+		}
+		.btn-primary:hover,.btn-primary:focus,.btn-primary:active {
+			background-color:#043a67;
+			border: none;
+		}
+		@media screen and (max-width: 768px) {
+		.preview {
+			font-size:40px
+		}
+		#prevLectura{
+			min-height: 120px;
+		}
+	}
+	</style>
+	<div class="container-fluid p-5 text-center" id="encabezado">
+		<h1>Bienvenido a SUPERLECTOR 2.0</h1>
+	</div>
+	<div class="container mt-3" id="app">
+	
+		<section v-if="etapa =='inicial'">
+			<div class="bg-secondary text-light p-1">
+				<p class="fs-3 fw-bold text-center">Copia y pega abajo el texto que quieres leer</p>
 			</div>
-		</div>
-	</section>
-	<section id="aplicativo" :class="{ 'd-none': etapa!='aplicativo'}">
-		<div class="row">
-			<div class="col-sm-6">
-				<button class="btn btn-warning" @click="etapa='inicial'"><i class="bi bi-arrow-left"></i></button>
-			</div>
-			<div class="col-sm-6 " v-show="!verSubConfiguracion">
-				<div class="d-grid gap-2 d-md-flex justify-content-md-end">
-					<!-- <button class="btn btn-morado px-4 "><i class="bi bi-window-split"></i></button>
-					<button class="btn btn-primary px-4 "><i class="bi bi-scissors"></i></button>
-					<button class="btn btn-warning px-4 "><i class="bi bi-eye"></i></button>
-					<button class="btn btn-success px-4 "><i class="bi bi-circle-fill"></i></button> -->
-					<button class="btn btn-danger px-4 " @click="verSubConfiguracion=true"><i class="bi bi-gear"></i></button>
+			<div class="my-2" id="textoInicial">
+				<textarea class="form-control" rows="15" v-model="textoInicial" id="textoPegar">
+				</textarea>
+				<div class="mt-2 d-grid d-flex justify-content-center">
+					<button class="btn btn-primary " @click="inciarAplicativo()"><span class="fs-5">SIGUIENTE</span></button>
 				</div>
 			</div>
-		</div>
-		<div class="card my-1" v-if="verSubConfiguracion">
-			<div class="card-body">
-				<div class="row row-cols-5">
-					<div class="col">
-						<label for="">Palabras por minuto</label>
-						<input type="number" class="form-control" v-model="palabrasxMinuto">
-					</div>
-					<div class="col">
-						<label for=""># Palabras</label>
-						<input type="number" class="form-control" v-model="numPalabras" @change="calcularPreview()">
-					</div>
-					<div class="col">
-						<label for="">Tamaño de fuente</label>
-						<select name="" id="" class="form-select" v-model="fuente_tamano" @change="cambiarTamano()">
-							<option v-for="fuente in fuentes" :value="fuente">{{fuente}}</option>
-						</select>
-					</div>
-					<div class="col">
-						<label for="">Tipo de fuente</label>
-						<select name="" id="" class="form-select" >
-							<option value="1">Liviano</option>
-							<option value="2" selected>Normal</option>
-							<option value="3">Negrita</option>
-						</select>
-					</div>
-					<div class="col-1 d-grid align-items-end">
-						<button class="btn btn-info" @click="verSubConfiguracion=false"><i class="bi bi-check-lg"></i></button>
+		</section>
+		<section id="aplicativo" :class="{ 'd-none': etapa!='aplicativo'}">
+			<div class="row">
+				<div class="col-sm-6">
+					<button class="btn btn-warning" @click="etapa='inicial'"><i class="bi bi-arrow-left"></i></button>
+				</div>
+				<div class="col-sm-6 " v-show="!verSubConfiguracion">
+					<div class="d-grid gap-2 d-md-flex justify-content-md-end">
+						<!-- <button class="btn btn-morado px-4 "><i class="bi bi-window-split"></i></button>
+						<button class="btn btn-primary px-4 "><i class="bi bi-scissors"></i></button>
+						<button class="btn btn-warning px-4 "><i class="bi bi-eye"></i></button>
+						<button class="btn btn-success px-4 "><i class="bi bi-circle-fill"></i></button> -->
+						<button class="btn btn-primary px-4 " @click="verSubConfiguracion=true"><i class="bi bi-gear"></i></button>
 					</div>
 				</div>
 			</div>
-		</div>
-		<div class="alert alert-primary my-2" role="alert" v-if="etapa=='aplicativo'">
-			Estás a punto de leer <b>{{ totalPalabras }}</b> palabras distribuidas entre <b>{{ lineasLeer }}</b> Líneas de <b>{{ numPalabras }} palabras cada una</b>, a una velocidad de <b>{{ palabrasxMinuto }} PPM (Palabras Por Minuto).</b> Aquí abajo tienes una previsualización de la línea más ancha de tu texto, con la configuración actual. Configura el tamaño y el estilo del texto haciendo clic en el botón <strong><i class="bi bi-gear-fill"></i></strong> y personaliza tu experiencia con SUPERLECTOR antes de empezar. Una vez lo hayas hecho, haz clic en el botón “Empezar Lectura” para empezar a leer.
-		</div>
-		<div v-if="etapa=='aplicativo'" id="preview" class="text-center preview">
-			{{preview}}
-		</div>
-		<div class="mt-2 d-grid d-flex justify-content-center" v-if="!verSubConfiguracion">
-			<button class="btn btn-danger " @click="empezarLectura()"><span class="fs-5">Empezar Lectura</span></button>
-		</div>
-	</section>
-	<section v-if="etapa=='lectura'" id="lectura">
-		<div class="row">
-			<div class="col-sm-6">
-				<button class="btn btn-warning" @click="regresarDeLectura()"><i class="bi bi-arrow-left"></i></button>
+			<div class="card my-1" v-if="verSubConfiguracion">
+				<div class="card-body">
+					<div class="row row-cols-5">
+						<div class="col">
+							<label for="">Palabras por minuto</label>
+							<input type="number" class="form-control" v-model="palabrasxMinuto">
+						</div>
+						<div class="col">
+							<label for=""># Palabras</label>
+							<input type="number" class="form-control" v-model="numPalabras" @change="calcularPreview()">
+						</div>
+						<div class="col">
+							<label for="">Tamaño de fuente</label>
+							<select name="" id="" class="form-select" v-model="fuente_tamano" @change="cambiarTamano()">
+								<option v-for="fuente in fuentes" :value="fuente">{{fuente}}</option>
+							</select>
+						</div>
+						<div class="col">
+							<label for="">Tipo de fuente</label>
+							<select name="" id="" class="form-select" >
+								<option value="1">Liviano</option>
+								<option value="2" selected>Normal</option>
+								<option value="3">Negrita</option>
+							</select>
+						</div>
+						<div class="col-1 d-grid align-items-end">
+							<button class="btn btn-info" @click="verSubConfiguracion=false"><i class="bi bi-check-lg"></i></button>
+						</div>
+					</div>
+				</div>
 			</div>
-		</div>
-		<div class="text-center preview" id="prevLectura">{{preview}}</div>
-		<div id="pausas" class="d-grid gap-2 d-flex justify-content-center">
-			<button class="btn bg-secondary-subtle btn-lg rounded-1 mx-1 d-none" title="Comenzar" @click="continuar()"><i class="bi bi-play-fill"></i></button>
-			<button class="btn bg-secondary-subtle btn-lg rounded-1 mx-1" title="Pausar" @click="pausar()"><i class="bi bi-pause-fill"></i></button>
-			<button class="btn bg-secondary-subtle btn-lg rounded-1 mx-1" title="Comenzar de nuevo" @click="reiniciar()"><i class="bi bi-skip-backward"></i></button>
-		</div>		
-	</section>
-
-</div>
-
-
-
-<script type="module">
-	import { createApp } from 'https://unpkg.com/vue@3/dist/vue.esm-browser.js'
+			<div class="alert alert-primary my-2" role="alert" v-if="etapa=='aplicativo'">
+				Estás a punto de leer <b>{{ totalPalabras }}</b> palabras distribuidas entre <b>{{ lineasLeer }}</b> Líneas de <b>{{ numPalabras }} palabras cada una</b>, a una velocidad de <b>{{ palabrasxMinuto }} PPM (Palabras Por Minuto).</b> Aquí abajo tienes una previsualización de la línea más ancha de tu texto, con la configuración actual. Configura el tamaño y el estilo del texto haciendo clic en el botón <strong><i class="bi bi-gear-fill"></i></strong> y personaliza tu experiencia con SUPERLECTOR antes de empezar. Una vez lo hayas hecho, haz clic en el botón “Empezar Lectura” para empezar a leer.
+			</div>
+			<div v-if="etapa=='aplicativo'" id="preview" class="text-center preview">
+				{{preview}}
+			</div>
+			<div class="mt-2 d-grid d-flex justify-content-center" v-if="!verSubConfiguracion">
+				<button class="btn btn-primary " @click="empezarLectura()"><span class="fs-5">Empezar Lectura</span></button>
+			</div>
+		</section>
+		<section v-if="etapa=='lectura'" id="lectura">
+			<div class="row">
+				<div class="col-sm-6">
+					<button class="btn btn-warning" @click="regresarDeLectura()"><i class="bi bi-arrow-left"></i></button>
+				</div>
+			</div>
+			<div class="text-center preview" id="prevLectura">{{preview}}</div>
+			<div id="pausas" class="d-grid gap-2 d-flex justify-content-center">
+				<button class="btn bg-secondary-subtle btn-lg rounded-1 mx-1 d-none" title="Comenzar" @click="continuar()"><i class="bi bi-play-fill"></i></button>
+				<button class="btn bg-secondary-subtle btn-lg rounded-1 mx-1" title="Pausar" @click="pausar()"><i class="bi bi-pause-fill"></i></button>
+				<button class="btn bg-secondary-subtle btn-lg rounded-1 mx-1" title="Comenzar de nuevo" @click="reiniciar()"><i class="bi bi-skip-backward"></i></button>
+			</div>
+		</section>
 	
-	createApp({
-		data() {
-			return {
-				textoInicial: "Para comenzar tu experiencia de lectura, simplemente copia y pega el texto que deseas abordar en la interfaz de nuestro innovador simulador, SUPERLECTOR 2.0. Este simulador ha sido diseñado meticulosamente para mejorar tu velocidad de lectura mediante la aplicación de la técnica avanzada de Presentación Rápida de Secuencias Visuales, esto te permitirá leer más rápido mostrando cada palabra o grupo de palabras durante sólo un instante. En el panel de configuración, podrás ajustar la velocidad de visualización (expresada en palabras por minuto), determinar el tamaño óptimo del fragmento que prefieres visualizar y personalizar la apariencia del texto según tu preferencia de fuente y tamaño.Para optimizar tu aprendizaje, te recomendamos practicar con una velocidad ligeramente superior a tu ritmo de lectura.Una vez que hayas afinado tus preferencias en el menú de ajustes, guarda la configuración y presiona con confianza el botón 'SIGUIENTE' para sumergirte en tu sesión de lectura mejorada con SUPERLECTOR 2.0. ¡Descubre un nuevo mundo de eficiencia y velocidad en tu proceso de lectura!",
-				etapa: 'inicial', numPalabras: 4, palabrasxMinuto:100, verSubConfiguracion:false, fuentes:[], peso:2, fuente_tamano:50, preview:'', aTexto:[], intervalo:null, inicio:0
-			}
-		},
-		mounted(){
-			for (let index = 10; index <= 80; index+=5) {
-				this.fuentes.push(index)
-			}
-			this.calcularPreview();
-		},
-		methods:{
-			inciarAplicativo(){
-				this.etapa='aplicativo'
-			},
-			async empezarLectura(){
-				this.etapa = 'lectura'
-				this.aTexto = this.textoInicial.split(' ')
-				this.preview = 'ㅤ';
-				this.inicio=0;
-				await this.sleep(1000);
-
-				this.intervalo = setInterval( ()=>{ this.extraerPalabras(); } , this.tiempo)
-			},
-			
-			calcularPreview(){
-				/* let temporal = this.textoInicial.split(' ').slice(0,this.numPalabras);
-				this.preview = temporal.join(' '); */
-				this.preview="Usa siempre la misma velocidad"
-			},
-			cambiarTamano(){
-				document.getElementById('preview').style.fontSize = `${this.fuente_tamano}px`
-				document.getElementById('lectura').style.fontSize = `${this.fuente_tamano}px`
-			},
-			extraerPalabras(){
-				this.preview = '';
-				for(let i=this.inicio; i<this.inicio+this.numPalabras; i++){
-					this.preview += this.aTexto[i]+' '
+	</div>
+	
+	
+	
+	<script type="module">
+		import { createApp } from 'https://unpkg.com/vue@3/dist/vue.esm-browser.js'
+	
+		createApp({
+			data() {
+				return {
+					textoInicial: "Para comenzar tu experiencia de lectura, simplemente copia y pega el texto que deseas abordar en la interfaz de nuestro innovador simulador, SUPERLECTOR 2.0. Este simulador ha sido diseñado meticulosamente para mejorar tu velocidad de lectura mediante la aplicación de la técnica avanzada de Presentación Rápida de Secuencias Visuales, esto te permitirá leer más rápido mostrando cada palabra o grupo de palabras durante sólo un instante. \n\rEn el panel de configuración, podrás ajustar la velocidad de visualización (expresada en palabras por minuto), determinar el tamaño óptimo del fragmento que prefieres visualizar y personalizar la apariencia del texto según tu preferencia de fuente y tamaño. \n\rPara optimizar tu aprendizaje, te recomendamos practicar con una velocidad ligeramente superior a tu ritmo de lectura. \n\rUna vez que hayas afinado tus preferencias en el menú de ajustes, guarda la configuración y presiona con confianza el botón 'SIGUIENTE' para sumergirte en tu sesión de lectura mejorada con SUPERLECTOR 2.0.",
+					etapa: 'inicial', numPalabras: 4, palabrasxMinuto:100, verSubConfiguracion:false, fuentes:[], peso:2, fuente_tamano:50, preview:'', aTexto:[], intervalo:null, inicio:0
 				}
-				//console.log(this.preview)
-				this.inicio+=this.numPalabras;
-				if(this.inicio >= this.aTexto.length){
-					this.preview=''
+			},
+			mounted(){
+				for (let index = 10; index <= 80; index+=5) {
+					this.fuentes.push(index)
+				}
+				this.calcularPreview();
+			},
+			methods:{
+				inciarAplicativo(){
+					this.etapa='aplicativo'
+				},
+				async empezarLectura(){
+					this.etapa = 'lectura'
+					this.aTexto = this.textoInicial.trim().replace('\n\r', '').split(' ')
+					this.preview = 'ㅤ';
+					this.inicio=0;
+					await this.sleep(1000);
+	
+					this.intervalo = setInterval( ()=>{ this.extraerPalabras(); } , this.tiempo)
+				},
+	
+				calcularPreview(){
+					/* let temporal = this.textoInicial.split(' ').slice(0,this.numPalabras);
+					this.preview = temporal.join(' '); */
+					this.preview="Usa siempre la misma velocidad"
+				},
+				cambiarTamano(){
+					document.getElementById('preview').style.fontSize = `${this.fuente_tamano}px`
+					document.getElementById('lectura').style.fontSize = `${this.fuente_tamano}px`
+				},
+				extraerPalabras(){
+					this.preview = '';
+					for(let i=this.inicio; i<this.inicio+this.numPalabras; i++){
+						this.preview += this.aTexto[i]+' '
+					}
+					//console.log(this.preview)
+					this.inicio+=this.numPalabras;
+					if(this.inicio >= this.aTexto.length){
+						this.preview=''
+						clearInterval(this.intervalo)
+					}
+				},
+				pausar(){
+					clearInterval(this.intervalo);
+				},
+				continuar(){this.intervalo = setInterval( ()=> this.extraerPalabras(), this.tiempo)},
+				reiniciar(){
+					this.inicio=0;
+					clearInterval(this.intervalo);
+					this.intervalo = null;
+					this.empezarLectura();
+				},
+				sleep(ms) {
+					return new Promise(resolve => setTimeout(resolve, ms));
+				},
+				regresarDeLectura(){
+					this.etapa='aplicativo';
+					this.preview='Usa siempre la misma velocidad';
 					clearInterval(this.intervalo)
 				}
 			},
-			pausar(){ 
-				clearInterval(this.intervalo);
-			},
-			continuar(){this.intervalo = setInterval( ()=> this.extraerPalabras(), this.tiempo)},
-			reiniciar(){
-				this.inicio=0;
-				clearInterval(this.intervalo);
-				this.intervalo = null;
-				this.empezarLectura();
-			},
-			sleep(ms) {
-				return new Promise(resolve => setTimeout(resolve, ms));
-			},
-			regresarDeLectura(){
-				this.etapa='aplicativo';
-				this.preview='Usa siempre la misma velocidad'; 
-				clearInterval(this.intervalo)
+			computed:{
+				totalPalabras (){
+					return  this.textoInicial=='' ?  0 : this.textoInicial.trim().split(' ').length;
+				},
+				lineasLeer(){
+					return parseFloat(this.totalPalabras / this.numPalabras).toFixed(0);
+				},
+				tiempo(){
+					return 60000/this.palabrasxMinuto
+				}
 			}
-		},
-		computed:{
-			totalPalabras (){
-				return  this.textoInicial=='' ?  0 : this.textoInicial.trim().split(' ').length;
-			},
-			lineasLeer(){
-				return parseFloat(this.totalPalabras / this.numPalabras).toFixed(0);
-			},
-			tiempo(){
-				return 60000/this.palabrasxMinuto
-			}
-		}
-	}).mount('#app')
-</script>
-<style>
-	.preview{
-		font-size: 50px;
-	}
-	.btn-danger{
-		background-color:#FB3C3C
-	}
-	@media screen and (max-width: 768px) {
-  .preview {
-    font-size:40px
-  }
-	#prevLectura{
-		min-height: 120px;
-	}
-}
-</style>
+		}).mount('#app')
+	</script>
+	
+</body>
+</html>
