--- a/script medMedory agilector.html
+++ b/script medMedory agilector.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>SUPERLECTOR 2.0</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -45,7 +45,11 @@
 	}
 	</style>
 	<div class="container-fluid p-5 text-center" id="encabezado">
-		<h1>Bienvenido a SUPERLECTOR 2.0</h1>
+		<div class="row">
+			<div class="col-4"><img src="logosolermin.jpg" class="img-fluid"></div>
+			<div class="col text-start d-flex align-items-center"><h1>Bienvenido a SUPERLECTOR 2.0</h1></div>
+		</div>
+		
 	</div>
 	<div class="container mt-3" id="app">
 	
@@ -61,12 +65,15 @@
 				</div>
 			</div>
 		</section>
-		<section id="aplicativo" :class="{ 'd-none': etapa!='aplicativo'}">
+		<section id="aplicativo" class="my-4" :class="{ 'd-none': etapa!='aplicativo'}">
 			<div class="row">
-				<div class="col-sm-6">
+				<div class="col-sm-6 py-5 ">
 					<button class="btn btn-warning" @click="etapa='inicial'"><i class="bi bi-arrow-left"></i></button>
 				</div>
-				<div class="col-sm-6 " v-show="!verSubConfiguracion">
+				<!-- <div class="col-sm-4 d-flex align-items-center">
+					<img src="logosolermin.jpg" class="img-fluid">
+				</div> -->
+				<div class="col-sm-6 py-5 " v-show="!verSubConfiguracion">
 					<div class="d-grid gap-2 d-md-flex justify-content-md-end">
 						<!-- <button class="btn btn-morado px-4 "><i class="bi bi-window-split"></i></button>
 						<button class="btn btn-primary px-4 "><i class="bi bi-scissors"></i></button>
@@ -107,8 +114,8 @@
 					</div>
 				</div>
 			</div>
-			<div class="alert alert-primary my-2" role="alert" v-if="etapa=='aplicativo'">
-				Estás a punto de leer <b>{{ totalPalabras }}</b> palabras distribuidas entre <b>{{ lineasLeer }}</b> Líneas de <b>{{ numPalabras }} palabras cada una</b>, a una velocidad de <b>{{ palabrasxMinuto }} PPM (Palabras Por Minuto).</b> Aquí abajo tienes una previsualización de la línea más ancha de tu texto, con la configuración actual. Configura el tamaño y el estilo del texto haciendo clic en el botón <strong><i class="bi bi-gear-fill"></i></strong> y personaliza tu experiencia con SUPERLECTOR antes de empezar. Una vez lo hayas hecho, haz clic en el botón “Empezar Lectura” para empezar a leer.
+			<div class="alert alert-primary my-4 fs-5 p-5" role="alert" v-if="etapa=='aplicativo'">
+				Estás a punto de leer <b>{{ totalPalabras }}</b> palabras distribuidas entre <b>{{ lineasLeer }}</b> Líneas de <b>{{ numPalabras }} palabras cada una</b>, a una velocidad de <b>{{ palabrasxMinuto }} PPM (Palabras Por Minuto).</b> Aquí abajo tienes una previsualización de la línea más ancha de tu texto, con la configuración actual. Configura el tamaño y el estilo del texto haciendo clic en el botón <strong><i class="bi bi-gear-fill"></i></strong> y personaliza tu experiencia con SUPERLECTOR 2.0 antes de empezar. Una vez lo hayas hecho, haz clic en el botón “Empezar Lectura” para empezar a leer.
 			</div>
 			<div v-if="etapa=='aplicativo'" id="preview" class="text-center preview">
 				{{preview}}
@@ -141,7 +148,7 @@
 		createApp({
 			data() {
 				return {
-					textoInicial: "Para comenzar tu experiencia de lectura, simplemente copia y pega el texto que deseas abordar en la interfaz de nuestro innovador simulador, SUPERLECTOR 2.0. Este simulador ha sido diseñado meticulosamente para mejorar tu velocidad de lectura mediante la aplicación de la técnica avanzada de Presentación Rápida de Secuencias Visuales, esto te permitirá leer más rápido mostrando cada palabra o grupo de palabras durante sólo un instante. \n\rEn el panel de configuración, podrás ajustar la velocidad de visualización (expresada en palabras por minuto), determinar el tamaño óptimo del fragmento que prefieres visualizar y personalizar la apariencia del texto según tu preferencia de fuente y tamaño. \n\rPara optimizar tu aprendizaje, te recomendamos practicar con una velocidad ligeramente superior a tu ritmo de lectura. \n\rUna vez que hayas afinado tus preferencias en el menú de ajustes, guarda la configuración y presiona con confianza el botón 'SIGUIENTE' para sumergirte en tu sesión de lectura mejorada con SUPERLECTOR 2.0.",
+					textoInicial: "Para comenzar tu experiencia de lectura, simplemente copia y pega el texto que deseas abordar en la interfaz de nuestro innovador simulador, SUPERLECTOR 2.0. Este simulador ha sido diseñado meticulosamente para mejorar tu velocidad de lectura mediante la aplicación de la técnica avanzada de Presentación Rápida de Secuencias Visuales, esto te permitirá leer más rápido mostrando cada palabra o grupo de palabras durante sólo un instante. \n\rEn el panel de configuración, podrás ajustar la velocidad de visualización (expresada en palabras por minuto), determinar el tamaño óptimo del fragmento que prefieres visualizar y personalizar la apariencia del texto según tu preferencia de fuente y tamaño. \n\rPara optimizar tu aprendizaje, te recomendamos practicar con una velocidad ligeramente superior a tu ritmo de lectura. \n\rA continuación, presiona con confianza el botón ''Siguiente'' para sumergirte en tu sesión de lectura rápida con SUPERLECTOR 2.0.",
 					etapa: 'inicial', numPalabras: 4, palabrasxMinuto:100, verSubConfiguracion:false, fuentes:[], peso:2, fuente_tamano:50, preview:'', aTexto:[], intervalo:null, inicio:0
 				}
 			},
@@ -168,7 +175,7 @@
 				calcularPreview(){
 					/* let temporal = this.textoInicial.split(' ').slice(0,this.numPalabras);
 					this.preview = temporal.join(' '); */
-					this.preview="Usa siempre la misma velocidad"
+					this.preview="ㅤ" //Usa siempre la misma velocidad
 				},
 				cambiarTamano(){
 					document.getElementById('preview').style.fontSize = `${this.fuente_tamano}px`
@@ -201,7 +208,7 @@
 				},
 				regresarDeLectura(){
 					this.etapa='aplicativo';
-					this.preview='Usa siempre la misma velocidad';
+					this.preview="ㅤ" //'Usa siempre la misma velocidad';
 					clearInterval(this.intervalo)
 				}
 			},
