--- a/script medMedory agilector.html
+++ b/script medMedory agilector.html
@@ -5,6 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>SUPERLECTOR 2.0</title>
+	<link rel="shortcut icon" href="logo_transparente.png">
+
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -35,6 +37,7 @@
 			background-color:#043a67;
 			border: none;
 		}
+		#logo{width: 160px;}
 		@media screen and (max-width: 768px) {
 		.preview {
 			font-size:40px
@@ -46,8 +49,9 @@
 	</style>
 	<div class="container-fluid p-5 text-center" id="encabezado">
 		<div class="row">
-			<div class="col-4"><img src="logosolermin.jpg" class="img-fluid"></div>
-			<div class="col text-start d-flex align-items-center"><h1>Bienvenido a SUPERLECTOR 2.0</h1></div>
+			<div class="col-12 col-sm-2  d-flex align-items-center justify-content-center" ><img id="logo" src="logo_transparente.png" class="img-fluid"></div>
+			<div class="col-12 col-sm-8 text-start d-flex align-items-center justify-content-center"><h1 class="text-center">Bienvenido a SUPERLECTOR 2.0</h1></div>
+			<div class="col-sm-2"></div>
 		</div>
 		
 	</div>
